# traffic_cypher

./: .gitignore  Cargo.toml  NEXT_STEPS.md  PROJECT_REVIEW.md  README.md  REMEDIATION_PLAN.md  REMEDIATION_PROGRESS.md  VISUALIZER.md
.github/workflows/: ci.yml
benchmark/: Makefile  bench_c.c  run.bat  run.sh
frontend/: app.js  index.html  phone.html  style.css  visualizer-v1.js
parity/: README.md  cases.json  parity_test.py
reports/: traffic_cypher_benchmark_report.docx
src/: cli.rs  crypto_derivation.rs  entropy_pool.rs  key_rotation.rs  main.rs  multi_stream.rs  password_gen.rs  stream_ingestion.rs  vault.rs
src/frontend/: app.js  style.css
src/web/: auth.rs  mod.rs  routes.rs  state.rs
test_fixtures/: argon2id_kek_kat.json  sample_vault_v2.json
tests/: 00_build_rust.sh  01_build_c.sh  10_rust_unit_tests.sh  11_static_checks_rust.sh  12_static_checks_c.sh  13_static_checks_threading.sh  14_static_frontend_dedup.sh  15_cors_narrow.sh  16_static_zeroize.sh  17_rust_http.sh  18_unlock_rate_limit.sh  19_clippy_clean.sh  20_esc_function.sh  21_command_injection.sh  22_socket_timeout.sh  23_socket_concurrency.sh  24_hardening_flags.sh  25_dom_attribute_sinks.sh  26_fuzz_scaffolding.sh  27_c_fuzz_scaffolding.sh  28_report_binaries_location.sh  29_multi_stream_unit.sh  30_c_tags_persisted.sh  31_c_no_entropy_lie.sh  32_rust_build_info.sh  33_os_only_build.sh  33_traffic_entropy_build.sh  34_c_auto_replay.sh  35_frontend_stream_states.sh  36_readme_traffic_entropy_pinning.sh  37_msm_e2e_smoke.sh  38_phone_camera_endpoint.sh  40_str_buf.sh  41_atomic_vault_writes.sh  50_c_pm_stress.sh  60_parity_smoke.sh  70_argon2id_v3.sh  71_argon2id_v2_upgrade.sh  99_servers_boot.sh  README.md  (+1 more)
tests/_c_helpers/: test_str_buf.c
tests/lib/: common.sh  esc_unit_test.js
traffic_cypher_in_C/: .gitignore  Makefile  run.bat  run.sh
traffic_cypher_in_C/frontend/: app.js  style.css
traffic_cypher_in_C/fuzz_c/: .gitignore  README.md
traffic_cypher_in_C/include/: base64_utils.h  crypto_derivation.h  entropy_extractor.h  entropy_pool.h  frame_sampler.h  hex_utils.h  key_rotation.h  multi_stream.h  password_gen.h  str_buf.h  stream_ingestion.h  system_entropy_mixer.h  totp.h  uuid_gen.h  vault.h  web_server.h
traffic_cypher_in_C/src_c/: base64_utils.c  crypto_derivation.c  entropy_extractor.c  entropy_pool.c  frame_sampler.c  hex_utils.c  key_rotation.c  main.c  multi_stream.c  password_gen.c  pm_main.c  (+7 more)
traffic_cypher_in_Rust/: Cargo.toml  run.bat  run.sh  rust-toolchain.toml
traffic_cypher_in_Rust/examples/: argon2_kat.rs  make_v2_vault.rs
traffic_cypher_in_Rust/fuzz/: .gitignore  Cargo.toml  README.md
traffic_cypher_in_Rust/fuzz/corpus/vault_v3_envelope/: seed.json
traffic_cypher_in_Rust/fuzz/fuzz_targets/: vault_v3_envelope.rs  vault_version_probe.rs
traffic_cypher_in_Rust/src/: entropy_extractor.rs  entropy_pool.rs  frame_sampler.rs  key_rotation.rs  lib.rs  main.rs  multi_stream.rs  password_gen.rs  stream_ingestion.rs  system_entropy_mixer.rs  totp.rs  vault.rs
traffic_cypher_in_Rust/src/web/: auth.rs  mod.rs  routes.rs  state.rs
traffic_cypher_in_Rust/tests/: http.rs
(+7 files in other folders)
