[package]
name = "traffic_cypher"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
publish = false
description = "Traffic-entropy password manager with rotating encryption keys"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "fs", "process", "signal", "net"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
base64 = "0.22"
getrandom = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
aes-gcm = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
totp-rs = { version = "5", features = ["gen_secret"] }
rand = "0.8"
libc = "0.2"
zeroize = { version = "1", features = ["zeroize_derive"] }
argon2 = "0.5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"

# Release profile: trade ~30s extra build time for smaller, faster binaries.
# `lto = "thin"` chosen over "fat" — ~95% of the size/perf win at ~20% of the
# cost. `strip = "symbols"` removes debug symbols (release builds keep
# panic-free traces via the `panic = "abort"` toggle when desired; leaving
# the default unwind so backtraces still print).
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
